# FuZeCORE.ai

./: .gitattributes  .gitignore  .raw  COMMIT_MESSAGE.md  RCAL5DRILLDOWN-20250919.md  RCAL5DRILLDOWN.md  RCA_MANAGEMENT.md  README.md  README_OLD.md  RESTORATION_SUMMARY.md  benchmark.sh  benchmark.sh.bak.20250914_085150  benchmark.sh.old  cracker.sh  forensics-and-fix  forensics-and-fix2  ollama-gemma-debug.sh  out.txt  output.txt  test
.forensics/: 20250914_065644.tgz  20250914_080159.tgz
.forensics/20250914_064817/: README.txt  forensics_bundle.tgz  host.txt
factory/: COMMUNICATION_PROTOCOL.md  debugging-commands.txt  debugging-plan.rs  fix-plan.rs  refine-and-bake-ollama-gpt-oss-20b-std.sh  run-test-fuckups.sh
factory/BAKERY/protocol-compoliance/: COMMUNICATION_PROTOCOL.json  COMMUNICATION_PROTOCOL.md  Cargo.toml  README.md  generate_pcs.rs  install.sh  lib.rs
factory/BAKERY/protocol-compoliance/tests/: integration_protocol-compliance_cli.rs  unit_protocol-compliance_build-compliance.rs  unit_protocol-compliance_error.rs  unit_protocol-compliance_llm.rs  unit_test_compliance.rs
fuze-box/: benchmarks.best.by_host_model.csv
protocol-compoliance-score/: 5LRCA.json  5LRCA.md  CODE_REVIEW_CHECKLIST.md  EDGE_PROTOCOL.md  IMPROVE_CODE_COVERAGE.json  IMPROVE_CODE_COVERAGE.md  build.sh  generate_pcs.rs  lib.rs
results/: fuze-bakery-deepseek-r1-70b-5060ti.results  fuze-bakery-gpt-oss-20b-5060ti.results
utils/: forensics-and-fix.sh  nvidia-diagnostics-20250915T223318Z.txt  nvidia-diagnostics.sh  patch_runner.sh  replace-block  setup_passwordless_sudo.sh
(+295 files in other folders)
